--- a/src/app/pages/account-management/mail-account.component.html
+++ b/src/app/pages/account-management/mail-account.component.html
@@ -1,15 +1,9 @@
 <div class="row">
 <nb-card style="width: 100%">
       <nb-card-body>
-        <div class="header-container" >
-          <div>
-            <h3>{{ 'GSM2 Management' | translate }}</h3>
-          </div>
-          <div style="display: inline-block;">
-            <h3>&nbsp;  </h3>
-          </div>
+        <ngx-page-header title='GSM2 Management'></ngx-page-header>
 
-          <div style="position: relative; float: right;margin-top: 5px;margin-bottom: 5px;">
+        <div style="position: relative; float: right;margin-top: 5px;margin-bottom: 5px;">
             <div class="ui-inputgroup">
               <span class="ui-float-label">
                 <input id="float-input" type="text" size="50" [(ngModel)]="mailAccountSearch" pInputText onclick="this.setSelectionRange(0, this.value.length)" style="padding-top: 7px; padding-bottom: 7px;">
@@ -56,7 +50,6 @@
         <p-button icon="fa fa-gavel" (click)="showDialogToRun()" label="{{ translate.get('Fetch data from server') | async }}"></p-button>
         <div class="divider"></div>
       </div>
-    </div>
 
       <p-dialog header="User Account Details" [(visible)]="displayDialog" [focusOnShow]="false"
                 [responsive]="true" showEffect="fade" [modal]="true"  height="600"
