page-header: renamed to title-header.

--- a/src/app/pages/account-management/mail-account.component.html
+++ b/src/app/pages/account-management/mail-account.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 <nb-card style="width: 100%">
       <nb-card-body>
-        <ngx-page-header title='GSM2 Management'></ngx-page-header>
+        <ngx-title-header title='GSM2 Management'></ngx-title-header>
 
         <div style="position: relative; float: right;margin-top: 5px;margin-bottom: 5px;">
             <div class="ui-inputgroup">
