--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -2,7 +2,7 @@
   <nb-card style="width: 100%">
     <nb-card-body>
 
-        <ngx-page-header title='Account Management'></ngx-page-header>
+        <ngx-title-header title='Account Management'></ngx-title-header>
 
         <div style="position: relative; float: right;margin-top: 5px;margin-bottom: 5px;">
           <div class="ui-inputgroup">
