--- a/src/app/pages/import-export/template.component.html
+++ b/src/app/pages/import-export/template.component.html
@@ -2,7 +2,7 @@
   <nb-card style="width: 100%">
     <nb-card-body>
 
-      <ngx-page-header title='Column Template'></ngx-page-header>
+      <ngx-title-header title='Column Template'></ngx-title-header>
 
         <div style="position: relative; float: right; margin-top: 5px;margin-bottom: 5px;">
           <div class="ui-inputgroup">
