--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -16,37 +16,11 @@
           </div>
         </div>
 
-         <!--
-        <ngx-table [columns]="cols" [value]="userAccounts" (lazyLoad)="loadUserAccountsLazy($event)"
-        [(selection)]="selectedUserAccount" dataKey="id" [totalRecords]="totalRecords" loading="loading"
-        (rowSelect)="onRowSelect($event)" (rowUnselect)="onRowUnselect($event)">
-        </ngx-table> -->
 
-        <p-table [columns]="cols" [value]="userAccounts" [lazy]="true" #table
-          (onLazyLoad)="loadUserAccountsLazy($event)" [loading]="loading" [scrollable]="true" [paginator]="true"
-          [rows]="20" [style]="{width:'100%'}" scrollHeight="58vh" selectionMode="single"
-          [(selection)]="selectedUserAccount" dataKey="id" [totalRecords]="totalRecords"
-          (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
-          <ng-template pTemplate="colgroup" let-columns>
-            <colgroup>
-              <col *ngFor="let col of columns " [style.width]="col.width" [pSortableColumn]>
-            </colgroup>
-          </ng-template>
-          <ng-template pTemplate="header" let-columns>
-            <tr>
-              <th *ngFor="let col of columns " [pSortableColumn]="col.field" (onClick)=resetSort()>
-                {{col.header | translate}}
-              </th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-rowData let-columns="cols">
-            <tr [pSelectableRow]="rowData">
-              <td *ngFor="let col of cols ">
-                {{rowData[col.field]}}
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
+        <ngx-table [columns]="cols" [value]="userAccounts" (lazyLoad)="loadUserAccountsLazy($event)"
+        [selection]="selectedUserAccount" dataKey="id" [totalRecords]="totalRecords" [loading]="loading"
+        (rowSelect)="onRowSelect($event)" (rowUnselect)="onRowUnselect($event)">
+        </ngx-table>
 
         <div class="button-positioner">
           <p-button icon="fa fa-plus" (click)="showDialogToAdd()" label="{{ translate.get('Create Account') | async }}">
