--- a/src/app/pages/user-card/user-card.component.html
+++ b/src/app/pages/user-card/user-card.component.html
@@ -3,6 +3,12 @@
     <nb-card-body>
       <ngx-title-header title='User Card'></ngx-title-header>
 
+
+      <ngx-table [columns]="cols$ | async" [value]="userCards" (lazyLoad)="loadUserCardsLazy($event)"
+      [selection]="selectedUserCard" dataKey="customerId" [totalRecords]="totalRecords" [loading]="loading">
+      </ngx-table>
+
+<!--
       <ng-container *ngIf="cols$ | async as cols">
         <p-table [columns]="cols" [value]="userCards" [lazy]="true" (onLazyLoad)="loadUserCardsLazy($event)"
           [loading]="loading" [scrollable]="true"  [paginator]="true" [rows]="20" [style]="{width:'100%'}"
@@ -32,7 +38,7 @@
           </ng-template>
         </p-table>
       </ng-container>
-
+-->
       <div style="position: relative; float: right; margin-top: 5px;">
         <p-button label="Export"></p-button>
         <div class="divider"></div>
