--- a/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
+++ b/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
@@ -11,7 +11,7 @@
 scrollHeight="58vh"
 selectionMode="single"
 [(selection)]="selection"
-dataKey="dataKey"
+[dataKey]="dataKey"
 [totalRecords]="totalRecords"
 (onRowSelect)="onRowSelect($event)"
 (onRowUnselect)="onRowUnselect($event)">
