--- a/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
+++ b/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
@@ -17,19 +17,19 @@ selectionMode="single"
 (onRowUnselect)="onRowUnselect($event)">
 <ng-template pTemplate="colgroup" let-columns>
   <colgroup>
-    <col *ngFor="let col of columns " [style.width]="col.width" [pSortableColumn]>
+    <col *ngFor="let col of columns "  [style.display]="col.header === 'ID' ? 'none': ''"  [style.width]="col.width" [pSortableColumn]>
   </colgroup>
 </ng-template>
 <ng-template pTemplate="header" let-columns>
   <tr>
-    <th *ngFor="let col of columns " [pSortableColumn]="col.field">
+    <th *ngFor="let col of columns "  [style.display]="col.header === 'ID' ? 'none': ''" [pSortableColumn]="col.field">
       {{col.header | translate}}
     </th>
   </tr>
 </ng-template>
 <ng-template pTemplate="body" let-rowData let-columns="columns">
   <tr [pSelectableRow]="rowData">
-    <td *ngFor="let col of columns ">
+    <td *ngFor="let col of columns" [style.display]="col.header === 'ID' ? 'none': ''" >
       {{rowData[col.field]}}
     </td>
   </tr>
