Hidden ID column when displaying.

--- a/src/app/pages/import-export/import-user-card.component.html
+++ b/src/app/pages/import-export/import-user-card.component.html
@@ -2,7 +2,7 @@
   <nb-card style="width: 100%" [nbSpinner]="loading" nbSpinnerStatus="danger">
     <nb-card-body>
 
-      <ngx-title-header title='Import User Card'></ngx-title-header>
+      <ngx-title-header title='Import Database'></ngx-title-header>
 
       <nb-stepper #stepper>
         <nb-step [stepControl]="zeroForm" label="{{ 'Select City' | translate }}">
